--- a/works.html
+++ b/works.html
@@ -49,6 +49,17 @@
                 <p>Разработка бота с использованием Python, Aiogram, Aiohttp, OpenWeatherMap API для получения текущей погоды в городах.
                 </p>
             </div>
+            <div class="project-block">
+                <h2>Telegram-бот отчётник</h2>
+                <p>Разработал бота отчётника с интеграцией системы O!task для отслеживания проектов непосредственно в телеграм-боте и последующего создания отчётов юзерами, 
+                    которые записывались в гугл таблицу. Стек: Python, Aiogram, MongoDB, aiohttp, sqlalchemy, Google Sheet API, Otask API.
+                </p>
+            </div>
+            <div class="project-block">
+                <h2>Telegram-бот копилка</h2>
+                <p>Простой копилка бот для компании о доходах/расходах. Стек: Python, Aiogram, sqlalchemy, MongoDB.
+                </p>
+            </div>
         </div>
         <div class="back">
             <h2 class="link"><a href="index.html" class='linkWork my-project'>На главную</a></h2>
